[gd_scene load_steps=28 format=3 uid="uid://ciovvk3slq8lc"]

[ext_resource type="Script" uid="uid://dnnatqu7iska0" path="res://scenes/pokemon_legends_za/main.gd" id="1_m2d4j"]
[ext_resource type="PackedScene" uid="uid://f6xpywa7euq2" path="res://addons/3d_player_controller_v2/player.tscn" id="2_sp3de"]
[ext_resource type="Texture2D" uid="uid://bpo2vwd0ruriv" path="res://assets/textures/prototype_textures/Dark/texture_08.png" id="3_ty8ub"]
[ext_resource type="Texture2D" uid="uid://dkwm7vgowgnwi" path="res://assets/textures/prototype_textures/Purple/texture_06.png" id="4_ox8er"]
[ext_resource type="Texture2D" uid="uid://cpjlls7li4sdq" path="res://assets/textures/prototype_textures/Orange/texture_05.png" id="5_m2d4j"]
[ext_resource type="Texture2D" uid="uid://7ci0m8gjrhjv" path="res://assets/textures/prototype_textures/Red/texture_08.png" id="6_ox8er"]
[ext_resource type="Texture2D" uid="uid://8kccffo58ufc" path="res://assets/textures/prototype_textures/Dark/texture_04.png" id="7_xckoa"]
[ext_resource type="Texture2D" uid="uid://c3ui4jf402ksm" path="res://assets/textures/prototype_textures/Light/texture_06.png" id="9_m2d4j"]
[ext_resource type="PackedScene" uid="uid://bga8sxeufkcky" path="res://scenes/beta/tennis_ball.tscn" id="10_bpj45"]
[ext_resource type="Script" uid="uid://c8puflx8oiii0" path="res://scenes/pokemon_legends_za/climbing_slab.gd" id="11_a4srh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8ey56"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_80jr4"]
sky_material = SubResource("ProceduralSkyMaterial_8ey56")

[sub_resource type="Environment" id="Environment_giorw"]
background_mode = 2
sky = SubResource("Sky_80jr4")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sugp2"]
albedo_texture = ExtResource("3_ty8ub")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_4npes"]
material = SubResource("StandardMaterial3D_sugp2")
size = Vector3(64, 0.1, 64)

[sub_resource type="BoxShape3D" id="BoxShape3D_8ey56"]
size = Vector3(64, 0.1, 64)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a4srh"]
albedo_texture = ExtResource("4_ox8er")
uv1_offset = Vector3(0, 0.5, 0)
uv1_triplanar = true

[sub_resource type="PrismMesh" id="PrismMesh_nfuly"]
left_to_right = 0.0
size = Vector3(1.5, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_utsp6"]
albedo_texture = ExtResource("5_m2d4j")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hjaec"]
albedo_texture = ExtResource("6_ox8er")
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_vys3x"]
size = Vector3(2, 0.5, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ryopr"]
albedo_texture = ExtResource("7_xckoa")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sn7dg"]
albedo_texture = ExtResource("7_xckoa")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m2d4j"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_m2d4j"]
size = Vector3(0.5, 2, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bpj45"]
albedo_texture = ExtResource("9_m2d4j")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_xckoa"]
material = SubResource("StandardMaterial3D_bpj45")
size = Vector3(0.5, 2, 0.1)

[node name="Main" type="Node3D"]
script = ExtResource("1_m2d4j")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_giorw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2_sp3de")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_4npes")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_8ey56")

[node name="Block_1_0x1_0x2_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
use_collision = true
size = Vector3(1, 1, 2)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Stairs_1_5x1_0x2_0" type="CSGMesh3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 0.5, 0)
use_collision = true
mesh = SubResource("PrismMesh_nfuly")
material = SubResource("StandardMaterial3D_utsp6")

[node name="Block_2_0x1_0x2_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -2)
use_collision = true
size = Vector3(2, 1, 2)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Block_2_0x3_0x4_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.5, -5)
use_collision = true
size = Vector3(2, 3, 4)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Slab_2_0x0_1x2_25" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.49999997, -0.86602545, 0, 0.86602545, 0.49999997, 0.5, 1.99, -2.435)
use_collision = true
size = Vector3(2, 0.1, 2.25)
material = SubResource("StandardMaterial3D_hjaec")
script = ExtResource("11_a4srh")

[node name="EndPoint" type="Node3D" parent="Slab_2_0x0_1x2_25"]
transform = Transform3D(1, 0, 0, 0, 0.86602545, -0.5, 0, 0.5, 0.86602545, 0, -0.10621822, -1.2160251)

[node name="PlayerDetection" type="Area3D" parent="Slab_2_0x0_1x2_25"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.82679486, 0.4000001)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Slab_2_0x0_1x2_25/PlayerDetection"]
transform = Transform3D(1, 0, 0, 0, 0.86602545, -0.5, 0, 0.5, 0.86602545, 0, -0.45, 0.7794235)
shape = SubResource("BoxShape3D_vys3x")

[node name="Block_1_0x3_0x3_0" type="CSGBox3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 1, 1.5, -7.5)
use_collision = true
size = Vector3(1, 3, 3)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Block_1_0x_6_0x_3_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3, -5.5)
use_collision = true
size = Vector3(1, 6, 3)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Slab_0_1x1_0x1_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.45, 3.5, -7.5)
use_collision = true
size = Vector3(0.1, 1, 1)
material = SubResource("StandardMaterial3D_ryopr")

[node name="Slab_0_5x_0_1x4_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 3.05, -9)
use_collision = true
size = Vector3(0.5, 0.1, 4)
material = SubResource("StandardMaterial3D_sn7dg")

[node name="CSGBox3D" type="CSGBox3D" parent="Slab_0_5x_0_1x4_0"]
transform = Transform3D(1, 0, 0, 0, 0.9961947, -0.08715574, 0, 0.08715574, 0.9961947, 0, -0.065, 2.741)
size = Vector3(0.5, 0.1, 1.5)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D3" type="CSGBox3D" parent="Slab_0_5x_0_1x4_0"]
transform = Transform3D(0.9659258, -0.25881904, 0, 0.25881904, 0.9659258, 0, 0, 0, 1, -0.48040208, -0.06785774, 1.4910002)
size = Vector3(0.5, 0.1, 1)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D4" type="CSGBox3D" parent="Slab_0_5x_0_1x4_0"]
transform = Transform3D(-0.96592593, 0.25881907, 8.7422784e-08, 0.25881907, 0.96592593, 0, -8.444392e-08, 2.262668e-08, -1, 0.47776532, -0.06785774, 1.4910002)
size = Vector3(0.5, 0.1, 1)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D2" type="CSGBox3D" parent="Slab_0_5x_0_1x4_0"]
transform = Transform3D(-1, -7.619397e-09, -8.709011e-08, 0, 0.9961947, -0.08715574, 8.742278e-08, -0.08715574, -0.9961947, 0, -0.06500006, -2.745)
size = Vector3(0.5, 0.1, 1.5)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D5" type="CSGBox3D" parent="Slab_0_5x_0_1x4_0"]
transform = Transform3D(0.9659258, -0.25881904, 0, 0.2588191, 0.9659258, 0, 0, 0, 1, -0.48040205, -0.067857504, -1.5089989)
size = Vector3(0.5, 0.1, 1)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D6" type="CSGBox3D" parent="Slab_0_5x_0_1x4_0"]
transform = Transform3D(-0.96592593, 0.25881907, 8.742278e-08, 0.25881907, 0.96592593, 0, -8.381903e-08, 2.2351742e-08, -1, 0.47776532, -0.067857504, -1.5089989)
size = Vector3(0.5, 0.1, 1)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="Block_2_0x3_0x4_0_1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.5, -12)
use_collision = true
size = Vector3(2, 3, 4)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Stairs_1_5x1_0x2_0_0" type="CSGMesh3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0.5, 3.5, -13.25)
use_collision = true
mesh = SubResource("PrismMesh_nfuly")
material = SubResource("StandardMaterial3D_utsp6")

[node name="Block_2_0x4_0x2_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.9999999, -15)
use_collision = true
size = Vector3(2, 4, 2)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Block_1_0x6_0x6_0" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3.0000002, -13)
use_collision = true
size = Vector3(1, 6, 6)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Slab_0_5x_0_1x4_1" type="CSGBox3D" parent="."]
transform = Transform3D(0.9961947, 0, -0.08715574, 0, 1, 0, 0.08715574, 0, 0.9961947, 2, 6.05, -8.5)
use_collision = true
size = Vector3(0.5, 0.1, 4)
material = SubResource("StandardMaterial3D_sn7dg")

[node name="CSGBox3D" type="CSGBox3D" parent="Slab_0_5x_0_1x4_1"]
transform = Transform3D(1, 0, 0, 0, 0.9961947, -0.08715574, 0, 0.08715574, 0.9961947, 0, -0.065, 2.741)
size = Vector3(0.5, 0.1, 1.5)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D4" type="CSGBox3D" parent="Slab_0_5x_0_1x4_1"]
transform = Transform3D(-0.96592593, 0.25882065, 8.940697e-08, 0.25881907, 0.96592593, 0, -8.195639e-08, 1.8626451e-09, -1, 0.47776484, -0.06785774, 1.7410016)
size = Vector3(0.5, 0.1, 0.5)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D2" type="CSGBox3D" parent="Slab_0_5x_0_1x4_1"]
transform = Transform3D(-1, -7.619397e-09, -8.709011e-08, 0, 0.9961947, -0.08715574, 8.742278e-08, -0.08715574, -0.9961947, 0, -0.065, -2.745)
size = Vector3(0.5, 0.1, 1.5)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="CSGBox3D5" type="CSGBox3D" parent="Slab_0_5x_0_1x4_1"]
transform = Transform3D(0.9659258, -0.25882065, 0, 0.2588191, 0.9659258, 0, 0, 2.0489097e-08, 1, -0.48040205, -0.06785774, -1.7589979)
size = Vector3(0.5, 0.1, 0.5)
material = SubResource("StandardMaterial3D_m2d4j")

[node name="Block_2_0x1_0x2_1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 6, -5)
use_collision = true
size = Vector3(2, 1, 2)
material = SubResource("StandardMaterial3D_a4srh")

[node name="Ladder_0_5x2_0x0_1" type="StaticBody3D" parent="." groups=["Ladder"]]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 1.45, 5, -15)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ladder_0_5x2_0x0_1"]
shape = SubResource("BoxShape3D_m2d4j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ladder_0_5x2_0x0_1"]
mesh = SubResource("BoxMesh_xckoa")

[node name="TennisBall" parent="." instance=ExtResource("10_bpj45")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.5, 6.5, -5)

[connection signal="body_entered" from="Slab_2_0x0_1x2_25/PlayerDetection" to="Slab_2_0x0_1x2_25" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Slab_2_0x0_1x2_25/PlayerDetection" to="Slab_2_0x0_1x2_25" method="_on_player_detection_body_exited"]
